--- a/ProduceAlmanac/res/layout/main.xml
+++ b/ProduceAlmanac/res/layout/main.xml
@@ -88,13 +88,13 @@
 	    	 />
      </LinearLayout>
     <LinearLayout
-	android:layout_width="fill_parent" android:layout_height="268.125dip">
+	android:layout_width="fill_parent" android:layout_height="450dip">
 
 	<com.example.coverflow.CoverFlow xmlns:coverflow="http://schemas.android.com/apk/res/com.example.coverflow"
-		coverflow:imageWidth="178.75dip" coverflow:imageHeight="268.125dip" coverflow:withReflection="true"
+		coverflow:imageWidth="300dip" coverflow:imageHeight="300dip" coverflow:withReflection="true"
 		coverflow:imageReflectionRatio="0.2" coverflow:reflectionGap="2dip" android:id="@+id/coverflowReflect"
 		android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5dip" 
-		android:focusable="false"
+		android:layout_marginBottom="24dip" android:focusable="false"
 		/>
 
 </LinearLayout>
