--- a/ProduceAlmanac/res/layout/main.xml
+++ b/ProduceAlmanac/res/layout/main.xml
@@ -19,7 +19,7 @@
 	    	android:layout_gravity="left"
 	    	android:textColor="@android:color/white"
 	    	android:typeface="sans"
-	    	android:textSize="59sp"
+	    	android:textSize="@dimen/produce_font"
 	    	android:paddingTop="10dip"
 	    	android:paddingLeft="20.6dip"
 	    	android:paddingRight="20.6dip"
@@ -52,7 +52,7 @@
         	android:layout_marginTop="25dip"
         	android:layout_height="wrap_content"
         	android:orientation="vertical"
-	    	android:textSize="50sp" />
+	    	android:textSize="@dimen/search_font" />
        	  
     	</LinearLayout>
     	
@@ -60,8 +60,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dip"
-        android:layout_marginTop="61.875dip"
+        android:layout_height="220dip"
+        android:layout_marginTop="44dip"
         android:orientation="vertical" 
 		android:paddingLeft="20.6dip"
 	    android:paddingRight="20.6dip">
@@ -69,22 +69,22 @@
                 
        	<TextView
 	   		android:layout_width="wrap_content"
-	    	android:layout_height="100dip"
+	    	android:layout_height="110dip"
 	    	android:text="EARLY"
 	    	android:textColor="@color/DeepGreen"
 
 	    	android:textStyle="bold"
-	    	android:textSize="105sp"
+	    	android:textSize="@dimen/largest_font"
 	    	/>
        	
        	<TextView
 	   		android:layout_width="wrap_content"
-	    	android:layout_height="100dip"
+	    	android:layout_height="110dip"
 	    	android:textStyle="bold"
 	    	android:text="APRIL"
 	    	android:textColor="@color/DeepGreen"
 	    	android:typeface="sans"
-	    	android:textSize="105sp"
+	    	android:textSize="@dimen/largest_font"
 	    	 />
      </LinearLayout>
     <LinearLayout
@@ -97,7 +97,7 @@
 		android:layout_marginBottom="24dip" android:focusable="false"
 		/>
 
+	</LinearLayout>
 </LinearLayout>
 
-</LinearLayout>
 
