--- a/ProduceAlmanac/res/layout/activity_profile.xml
+++ b/ProduceAlmanac/res/layout/activity_profile.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:background="@android:color/white"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:layout_marginRight="20dip" >
 
     <LinearLayout
         android:layout_width="match_parent"
