--- a/ProduceAlmanac/res/layout/activity_profile.xml
+++ b/ProduceAlmanac/res/layout/activity_profile.xml
@@ -8,7 +8,8 @@
     android:background="@android:color/white"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginRight="20dip" >
+    android:layout_marginRight="20dip"
+    android:layout_marginBottom="20dip">
 
     <LinearLayout
         android:layout_width="match_parent"
