--- a/ProduceAlmanac/res/layout/activity_profile.xml
+++ b/ProduceAlmanac/res/layout/activity_profile.xml
@@ -3,19 +3,14 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent" android:layout_height="fill_parent">
     
-<LinearLayout 
-    android:layout_width="match_parent"
-    android:background="@android:color/white"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_marginRight="20dip"
-    android:layout_marginBottom="20dip">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:typeface="sans" >
+        android:typeface="sans" 
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,12 +30,21 @@
                 android:textSize="@dimen/produce_font"
                 android:typeface="sans" />
         </LinearLayout>
-
+<LinearLayout 
+    android:layout_width="match_parent"
+    android:background="@android:color/white"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_marginRight="20dip"
+    android:layout_marginBottom="20dip"
+>
         <LinearLayout
             android:id="@+id/item_photo"
             android:layout_width="554dip"
             android:layout_height="412dip"
             android:layout_margin="24dip"
+                android:layout_marginRight="20dip"
+    android:layout_marginBottom="20dip"
             android:background="@android:color/black"
             android:orientation="vertical" 
             android:gravity="bottom|right">
