--- a/ProduceAlmanac/res/layout/main.xml
+++ b/ProduceAlmanac/res/layout/main.xml
@@ -94,13 +94,22 @@
      </LinearLayout>
     <LinearLayout
 	android:layout_width="fill_parent" android:layout_height="450dip">
-
+<!-- 
 	<com.example.coverflow.CoverFlow xmlns:coverflow="http://schemas.android.com/apk/res/com.example.coverflow"
 		coverflow:imageWidth="200dip" coverflow:imageHeight="300dip" coverflow:withReflection="true"
 		coverflow:imageReflectionRatio="0.2" coverflow:reflectionGap="2dip" android:id="@+id/coverflowReflect"
 		android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5dip" 
 		android:layout_marginBottom="24dip" android:focusable="false"
 		/>
+-->
+	<GridView
+        android:id="@+id/gridview"
+        android:layout_width="fill_parent" 
+        android:layout_height="350dip"
+        android:columnWidth="150dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:gravity="center"/>
 
 	</LinearLayout>
 </LinearLayout>
