--- a/ProduceAlmanac/res/layout/main.xml
+++ b/ProduceAlmanac/res/layout/main.xml
@@ -56,7 +56,7 @@
     
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="450dip"
+        android:layout_height="fill_parent"
         android:orientation="vertical">
      	<GridView
      	    android:id="@+id/gridview"
@@ -66,7 +66,9 @@
      	    android:gravity="center"
      	    android:numColumns="auto_fit"
      	    android:stretchMode="columnWidth" />
+     
      	</LinearLayout>
+     	
     	
 </ScrollView>
 
