--- a/ProduceAlmanac/res/layout/main.xml
+++ b/ProduceAlmanac/res/layout/main.xml
@@ -58,7 +58,8 @@
         android:id="@+id/grid_linearlayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="60dip">
         <!--
      	<GridView
      	    android:id="@+id/gridview"
