--- a/ProduceAlmanac/res/layout/main.xml
+++ b/ProduceAlmanac/res/layout/main.xml
@@ -43,6 +43,7 @@
     
 
 	<SearchView
+	    android:id="@+id/searchView"
 	    android:layout_width="match_parent"
         android:layout_height="@dimen/height_of_buttons"
 	    android:queryHint = "search"
@@ -50,6 +51,9 @@
 	    android:iconifiedByDefault="true"
 	    android:textColor="@android:color/white"
 	    />
+	<ListView android:layout_width="fill_parent"
+	          android:id="@+id/list"
+              android:layout_height="wrap_content" />
 
 <ScrollView
     android:layout_width="fill_parent" 
