summer squash smaller font etc

--- a/ProduceAlmanac/res/layout/main.xml
+++ b/ProduceAlmanac/res/layout/main.xml
@@ -24,6 +24,16 @@
 	    	android:textSize="@dimen/largest_font"
 	    	android:layout_marginBottom="10dip"
 	    	 />
+       	<TextView
+	   		android:layout_width="wrap_content"
+	    	android:layout_height="70dip"
+	    	android:textStyle="bold"
+	    	android:text="in season today:"
+	    	android:textColor="@color/Brown"
+	    	android:typeface="sans"
+	    	android:textSize="@dimen/produce_font"
+	    	android:layout_marginBottom="10dip"
+	    	 />
     
      
 	<Spinner
@@ -57,7 +67,7 @@
 
 <ScrollView
     android:layout_width="fill_parent" 
-    android:layout_height="500dip">
+    android:layout_height="fill_parent">
     
     <LinearLayout
         android:id="@+id/grid_linearlayout"
