--- a/ProduceAlmanac/res/layout/main.xml
+++ b/ProduceAlmanac/res/layout/main.xml
@@ -27,7 +27,7 @@
     
      
 	<Spinner
-    android:id="@+id/grocery_store_spinner"
+    android:id="@+id/spinner2"
     android:layout_width="fill_parent"
     android:layout_height="@dimen/height_of_buttons"
     android:layout_marginBottom="10dip"
