--- a/ProduceAlmanac/res/layout/activity_main2.xml
+++ b/ProduceAlmanac/res/layout/activity_main2.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,6 +7,11 @@
     android:orientation="vertical" 
     android:typeface="sans">
 
+   <menu>
+    <item android:id="@+id/notification"
+          android:title="@string/notification" />
+   </menu>
+	
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="82.5dip"
