--- a/ProduceAlmanac/res/layout/main.xml
+++ b/ProduceAlmanac/res/layout/main.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+	
 
 
         <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:typeface="sans" 
         android:orientation="vertical" 
         android:layout_marginTop="44dip"
 		android:paddingLeft="20.6dip"
 		android:background="@android:color/white"
-	    android:paddingRight="20.6dip">
+	    android:paddingRight="20.6dip"
+	    xmlns:tools="http://schemas.android.com/tools"
+	    tools:context=".CoverFlowTestingActivity">
 
        	
        	<TextView
