--- a/ProduceAlmanac/res/values/dimens.xml
+++ b/ProduceAlmanac/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="title_font">40sp</dimen>
     <dimen name="body_font">24sp</dimen>
     <dimen name="height_of_buttons">80dip</dimen>
+    
+    <dimen name="button_font">40sp</dimen>
+    <dimen name="store_title_size">40sp</dimen>
+    <dimen name="width_of_button">80dip</dimen>
 </resources>
