--- a/ProduceAlmanac/res/layout/action_bar_edit_mode.xml
+++ b/ProduceAlmanac/res/layout/action_bar_edit_mode.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent"           
         android:layout_weight="1"
         android:src="@+drawable/save"
-        android:color="#FFFFFF"
+        android:color="#000000"
         android:text="Save" />
 
     </LinearLayout>    
