--- a/ProduceAlmanac/res/values/styles.xml
+++ b/ProduceAlmanac/res/values/styles.xml
@@ -1,6 +1,8 @@
 <resources>
 
-    <style name="AppBaseTheme" parent="android:Theme.Holo.Light"></style>
+    <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
+        <item name="android:actionBarSize">100dp</item>
+    </style>
     <style name="AppTheme" parent="AppBaseTheme"></style>
 
 </resources>
